--- a/TeamCores.Web/wwwroot/css/question/add.scss
+++ b/TeamCores.Web/wwwroot/css/question/add.scss
@@ -98,7 +98,8 @@ $button-default-bg-color: #E5E5E5;
             display: block;
             list-style: none;
             width: 145px;
-            margin-left: -1px;
+            margin: 1px;
+
 
             .ivu-input-wrapper {
                 line-height: 15px;
@@ -113,16 +114,17 @@ $button-default-bg-color: #E5E5E5;
             }
 
             &.add {
-                height: 66px;
+                height: 100%;
                 width: 40px;
                 border-right: 0;
                 margin-top: -1px;
 
                 a {
                     display: block;
+                    vertical-align: middle;
                     width: 30px;
-                    height: 67px;
-                    line-height: 68px;
+                    height: 100%;
+                    line-height: 99px;
                     color: $a-color;
                     border-radius: 0;
                     padding: 0;
