--- a/TeamCores.Web/Views/Subjects/Index.cshtml
+++ b/TeamCores.Web/Views/Subjects/Index.cshtml
@@ -305,7 +305,7 @@
                         }
                     });
                 },
-                // 更新科目
+                // 删除科目
                 deleteSubject(subjectId) {
                     Ajax.post({
                         url: '/api/subjects/delete',
