--- a/TeamCores.Web/Views/Questions/Index.cshtml
+++ b/TeamCores.Web/Views/Questions/Index.cshtml
@@ -354,8 +354,8 @@
                  */
                 goEdit(item)
                 {
-                    const courseId = item.CourseId;
-                    location = `/questions/edit/${courseId}`;
+                    const questionId = item.QuestionId;
+                    location = `/questions/edit/${questionId}`;
                 },
 
                 /**
